@@ -179,15 +179,14 @@ class EVF_Shortcode_Form {
 	 * @param array $form_data Form data.
 	 */
 	public static function label( $field, $form_data ) {
-		
-		$label = $field['properties']['label'];
 
+		$label = $field['properties']['label'];
 		// If the label is empty or disabled don't proceed.
 		if ( empty( $label['value'] ) || $label['disabled'] ) {
 			return;
 		}
 
-		$required    = $label['required'] ? apply_filters( 'everest_forms_field_required_label', '<abbr class="required" title="' . esc_attr__( 'Required', 'everest-forms' ) . '">*</abbr>' ) : '';
+		$required    = $label['required'] ? apply_filters( 'everest_forms_field_required_label', '<abbr class="required" title="' . esc_attr__( 'Required', 'everest-forms' ) . '">' . apply_filters( 'everest_form_get_required_type', '*', $field, $form_data ) . '</abbr>' ) : '';
 		$custom_tags = apply_filters( 'everest_forms_field_custom_tags', false, $field, $form_data );
 
 		printf(
@@ -329,10 +328,10 @@ class EVF_Shortcode_Form {
 					}
 
 					$should_display_field = apply_filters( "everest_forms_should_display_field_{$field['type']}", true, $field, $form_data );
-                    
+
 					if ( true !== $should_display_field ) {
-                        continue;
-                    }
+						continue;
+					}
 
 					// Get field attributes.
 					$attributes = self::get_field_attributes( $field, $form_data );
